# nekobot

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  betterthangravity  cmake_install.cmake  install.sh  nekobot.js
framework/: Command.js
include/: module.hpp
src/: client.cpp  client.hpp  config.cpp  intake.cpp  intake.hpp  main.cpp  main.hpp  modules.cpp
src/framework/: client.cpp  client.hpp  events.cpp  events.hpp
src/util/: chrono.hpp  functional.hpp  iohelper.cpp  iohelper.hpp  strings.cpp  strings.hpp
